<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorPrimary">

        <TextView
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif-medium"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="italic"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />

    </FrameLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/food_main"
            android:contentDescription="@string/main_activity_name_app"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="228dp"
            android:background="#63000000"
            android:gravity="center"
            android:shadowRadius="2"
            android:text="@string/main_activity_name_app"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:orientation="horizontal"
        android:background="@color/colorPrimary">

        <Button
            android:id="@+id/buttonFirstCourse"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBotton"
            android:text="@string/first_course_button" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonSecondCourse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBotton"
            android:text="@string/Second_course_button" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonDesserts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBotton"
            android:text="@string/desserts_button" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:id="@+id/buttonCocktails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:backgroundTint="@color/colorBotton"
            android:text="@string/cocktails_button" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:background="@color/colorBotton">

        <ImageView
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/olady"
            android:contentDescription="@string/Button_olady"/>

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="20dp"
            android:background="#63000000"
            android:gravity="center"
            android:shadowRadius="2"
            android:text="@string/Button_olady"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />

    </RelativeLayout>

</LinearLayout>